# rnux

./: CMakeLists.txt  LICENSE  README.md
assets/: install.sh
src/: application.h  globalhotkey.cpp  globalhotkey.h  main.cpp  mainwindow.cpp  mainwindow.h  windowui.cpp  windowui.h
src/features/: app_launcher.cpp  app_launcher.h  calculator.cpp  calculator.h  clipboard.cpp  clipboard.h  feature_base.h  search.cpp  search.h  system_commands.cpp  system_commands.h  time_conversion.cpp  time_conversion.h
